Edited wiki page through web user interface.

--- a/wiki/Tutorials.wiki
+++ b/wiki/Tutorials.wiki
@@ -2,4 +2,4 @@
 
 = Details =
 
-This area will one day contain user-contributed tutorials for the phreeze framework
+[AuthenticationExample How to use Phreeze's Built-In Authentication]
