Edited wiki page through web user interface.

--- a/wiki/Tutorials.wiki
+++ b/wiki/Tutorials.wiki
@@ -2,4 +2,4 @@
 
 = Details =
 
-[AuthenticationExample How to use Phreeze's Built-In Authentication]
+[AuthenticationExample Phreeze Authentication Tutorial]
