--- a/wiki/AuthenticationExample.wiki
+++ b/wiki/AuthenticationExample.wiki
@@ -4,10 +4,10 @@
 
 Phreeze provides a built-in mechanism for authentication that you can use in your application.  This gives you the ability to require users to login, and restrict the actions that these users can perform.  You have two options for using this feature:
 
- # Implement your own IAuthenticatible class
+ # Implement your own IAuthenticatable class
  # Adhere to a compatible schema in your database
 
-== Implement your own IAuthenticatible class ==
+== Implement your own IAuthenticatable class ==
 
 The base Controller class provides three methods that are used for authentication.  They are:
 
